--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Listmerger",
+  "name": "listmerger",
   "version": "0.1",
   "description": "Library to merge multiple lists",
   "main": "./dist/library/cjs/index.js",
@@ -7,7 +7,8 @@
   "scripts": {
     "clean": "npx gulp clean",
     "build": "npx gulp build",
-    "dev": "npx gulp dev"
+    "dev": "npx gulp dev",
+    "deploy": "pnpm build && gh-pages -d dist"
   },
   "repository": "git+https://github.com/mrabensteiner/listmerger",
   "keywords": [],
@@ -20,6 +21,7 @@
     "@rollup/plugin-typescript": "8.3.3",
     "browser-sync": "^2.26.2",
     "del": "^6.0.0",
+    "gh-pages": "^6.3.0",
     "gulp": "^5.0.0",
     "gulp-base64-inline": "^1.0.6",
     "gulp-rollup": "^2.17.0",
@@ -27,6 +29,6 @@
     "rollup-plugin-gzip": "^2.5.0",
     "rollup-plugin-terser": "^7.0.2",
     "tslib": "^2.2.0",
-    "typescript": "^5.5.3"
+    "typescript": "^5.9.3"
   }
 }
